setting up for generic data

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #000000;
-  font-size: 24px;
+  font-size: 16px;
   min-height: 1280px;
 }
 
@@ -39,7 +39,7 @@ a:hover {
 
 #intro {
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,9 +48,14 @@ a:hover {
 
 #intro h1 {
   font-family: 'Roboto Slab', serif;
-  font-size: 3em;
+  font-weight: 700;
+  font-size: 4em;
   margin-top: 0;
   margin-bottom: 0.25em;
+}
+
+#intro p {
+  font-size: 1.25em;
 }
 
 
@@ -118,13 +123,33 @@ figure p {
 }
 
 .step.is-active h2 {
-  background-color: papayawhip;
-  color: #3b3b3b;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .step h2 {
-  text-align: center;
-  padding: 1rem;
-  font-size: 1.5rem;
-  background-color: #3b3b3b;
+  padding: 1em;
+  font-size: 1.25em;
+  background-color: #fff;
+  color: #000000;
+}
+
+.step img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.step .description {
+  color: #000000;
+  margin: 1em;
+  font-size: 1em;
+}
+
+.step .description p {
+  margin-bottom: 1em;
+}
+
+.step .description p:last-child {
+  margin-bottom: 0;
 }
