--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,21 @@ a:hover {
   font-size: 1.25em;
 }
 
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
 
 #outro {
-  height: 240px;
+  height: 540px;
 }
 
 #scrolly {
@@ -72,8 +84,8 @@ a:hover {
 article {
   position: relative;
   padding: 0;
-  max-width: 20rem;
-  margin: 0 auto;
+  max-width: 30rem;
+  margin: 0 0 0 5em;
 }
 
 figure {
@@ -81,7 +93,7 @@ figure {
   position: sticky;
   left: 0;
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
   margin: 0;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -95,6 +107,17 @@ figure {
   z-index: 10;
   width: 100vw;
   height: 100vh;
+}
+
+#masthead {
+  right: 0;
+  position: absolute;
+  z-index: 11;
+  padding: 1em;
+}
+
+#masthead h3 {
+  font-weight: 400;
 }
 
 figure p {
@@ -115,7 +138,7 @@ figure p {
 .step {
   margin: 0 auto 2rem auto;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.1);
+  background: transparent;
 }
 
 .step:last-child {
@@ -141,8 +164,9 @@ figure p {
 }
 
 .step .description {
+  background-color: #fff;
   color: #000000;
-  margin: 1em;
+  padding: 1em;
   font-size: 1em;
 }
 
@@ -152,4 +176,24 @@ figure p {
 
 .step .description p:last-child {
   margin-bottom: 0;
+}
+
+/* mobile breakpoint */
+
+@media (max-width: 767.98px) {
+
+  article {
+    max-width: 25rem;
+    margin: 0 0 0 2em;
+  }
+
+}
+
+@media (max-width: 575.98px) {
+
+  article {
+    max-width: 100%;
+    margin: 0 1em;
+  }
+
 }
