--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,15 @@ figure {
   height: 100vh;
 }
 
+.marker {
+  &::after {
+    content: url('../images/map-marker.svg');
+    display: block;
+    height: 1em;
+    width: 1em;
+  }
+}
+
 #masthead {
   right: 0;
   position: absolute;
